[tool.poetry]
name = "sistema-cep"
version = "0.1.0"
description = ""
authors = ["Vinicius Rocha Lima <vinicius@empowerdata.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.36.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
